--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.settings.desktop (8.2.0) noble; urgency=medium
+
+  * Release 8.2.0
+
+ -- Danielle Foré <daniell@elementary.io>  Fri, 16 May 2025 11:37:27 -0700
+
 io.elementary.settings.desktop (8.1.0) noble; urgency=medium
 
   * Release 8.1.0 (#420)
