--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.settings.desktop (8.2.1) noble; urgency=medium
+
+  * Release 8.2.1
+
+ -- Danielle Foré <danielle@elementary.io>  Mon, 17 Nov 2025 08:54:58 -0800
+
 io.elementary.settings.desktop (8.2.0) noble; urgency=medium
 
   * Release 8.2.0
